--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-/<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
             <div id="loading-indicator" class="loader" style="display: none;"></div>
         </div>
     </div>
-   /
+   
     <script src="main.js"></script> 	
       <script>
     document.getElementById('user-input').addEventListener('keydown', function(event) {
